language/move-lang/tests/move_check/borrows/freeze_field_invalid.exp
error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/freeze_field_invalid.move:12:9
   │
11 │         let f = &mut s.f;
   │                 -------- Field 'f' is still being mutably borrowed by this reference
12 │         freeze(s);
   │         ^^^^^^^^^ Invalid freeze.

error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/freeze_field_invalid.move:19:9
   │
18 │         let g = &mut s.f;
   │                 -------- Field 'f' is still being mutably borrowed by this reference
19 │         freeze(s);
   │         ^^^^^^^^^ Invalid freeze.

